--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,9 +1,15 @@
+:root {
+    --white: #ffffff;
+    --bg: #2c3e50;
+    --bg-darker: #0c2032;
+}
+
 body {
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    color: #ffffff;
-    background-color: #2c3e50;
+    color: var(--white);
+    background-color: var(--bg);
 }
 
 a:link {
