Add options to (un)hide languages from the list

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,5 @@
+@import url(modal.css);
+
 :root {
     --white: #ffffff;
     --bg: #2c3e50;
@@ -22,4 +24,10 @@ a:visited {
 
 #app {
     padding: 1em;
+}
+
+.icon-button {
+    background-color: rgb(0, 0, 0, 0.4);
+    color: inherit;
+    border: none;
 }
